Add initial html structure(head/main/footer), font awesome link, social networks and google fonts:poppins

--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="GeoQUiz. a Geography Quiz for all ages and academic backgrounds">
+    <meta name="keywords" content="GeoQUiz, Trivia, Game, Geopolitcs, Climatology, Landforms, Earth, Biogeography">
+    <!-- Title -->
     <title>GeoQuiz</title>
+    <!-- Style -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <h1>test</h1>
+    <!--Head-->
+    <header class="header">
+        <a herf="index.html">GeoQuiz</a>
+    </header>
+
+    <!--Main-->
+    <main class="main">
+
+    </main>
+
+    <!--Footer-->
+    <footer class="footer">
+        <div id="social-container">
+            <ul id="social-networks">
+                <li><a href="https://www.linkedin.com/in/henrique-pesciotti-694404134/?locale=en_US" target="_blank"
+                        rel="noopener" aria-label="visit the website's author LinkedIn page (opens in a new tab)"><i
+                            class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/hpesciotti" target="_blank" rel="noopener"
+                        aria-label="visit the website's author GitHub (opens in a new tab)"><i
+                            class="fa-brands fa-github"></i></a></li>
+            </ul>
+        </div>
+    </footer>
+    <!--Font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
