Add style to index page - background image, footer and header

--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
 </head>
 
 <body>
-    <!--Head-->
-    <header class="header">
-        <a herf="index.html">GeoQuiz</a>
+    <!--Header-->
+    <header>
+        <a herf="index.html" class="header-title">
+            <span id="header-word-1">Geo</span>
+            <span id="header-word-2">Quiz</span>
+        </a>
     </header>
 
     <!--Main-->
-    <main class="main">
+    <main>
 
     </main>
 
     <!--Footer-->
-    <footer class="footer">
+    <footer>
         <div id="social-container">
             <ul id="social-networks">
                 <li><a href="https://www.linkedin.com/in/henrique-pesciotti-694404134/?locale=en_US" target="_blank"
