Add question-section and its basic style

--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
 
     <!--Main-->
     <main>
-        
+        <section id="question-container">
+            <div id="quiz-section">
+                <div id="quiz-box">
+                    <h2 id="question">Question placemark</h2>
+                    <div id="answer-buttons">
+                        <button class="btn">Answer 1</button>
+                        <button class="btn">Answer 2</button>
+                        <button class="btn">Answer 3</button>
+                        <button class="btn">Answer 4</button>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
 
     <!--Footer-->
