Add style to buttons and question text

--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
         <section id="question-container">
             <div id="quiz-section">
                 <div id="quiz-box">
+                    <h1>Quiz</h1>
                     <h2 id="question">Question placemark</h2>
                     <div id="answer-buttons">
-                        <button class="btn">Answer 1</button>
-                        <button class="btn">Answer 2</button>
-                        <button class="btn">Answer 3</button>
-                        <button class="btn">Answer 4</button>
+                        <button class="btn-option">Answer 1</button>
+                        <button class="btn-option">Answer 2</button>
+                        <button class="btn-option">Answer 3</button>
+                        <button class="btn-option">Answer 4</button>
                     </div>
+                    <button id="btn-next">Next</button>
                 </div>
             </div>
             </div>
