Creat script.js add script to index.html and comments credits to style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="GeoQUiz. a Geography Quiz for all ages and academic backgrounds">
+    <meta name="description" content="GeoQuiz. a Geography Quiz for all ages and academic backgrounds">
     <meta name="keywords" content="GeoQUiz, Trivia, Game, Geopolitcs, Climatology, Landforms, Earth, Biogeography">
     <!-- Title -->
     <title>GeoQuiz</title>
@@ -28,7 +28,7 @@
             <div id="quiz-section">
                 <div id="quiz-box">
                     <h1>Quiz</h1>
-                    <h2 id="question">Question placemark</h2>
+                    <h2 id="question">Question placemark holder</h2>
                     <div id="answer-buttons">
                         <button class="btn-option">Answer 1</button>
                         <button class="btn-option">Answer 2</button>
@@ -55,8 +55,12 @@
             </ul>
         </div>
     </footer>
+
     <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
+
+    <!-- Script -->
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
