--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
     <!-- Script -->
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/questions.js"></script>
 </body>
 
 </html>
