--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta name="keywords" content="GeoQUiz, Trivia, Game, Geopolitcs, Climatology, Landforms, Earth, Biogeography">
     <!-- Title -->
     <title>GeoQuiz</title>
+     <!-- Favicon -->
+     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+     <link rel="manifest" href="assets/favicon/site.webmanifest">
     <!-- Style -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
