chore: update meta tags for search engines in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="GeoQuiz. a Geography Quiz for all ages and academic backgrounds">
+    <meta name="description" content="GeoQuiz | a Geography Quiz for all ages and backgrounds">
     <meta name="keywords" content="GeoQUiz, Trivia, Game, Geopolitcs, Climatology, Landforms, Earth, Biogeography">
     <!-- Title -->
     <title>GeoQuiz</title>
