feature: Add and style progress bar

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                     </div>
                     <button id="btn-next">Next</button>
                 </div>
+                <div id="progress-bar">
+                    <div id="my-progress"></div>
+                  </div>
             </div>
             </div>
         </section>
