fix: correct a typo on href on the logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!--Header-->
     <header>
-        <a herf="index.html" class="header-title">
+        <a href="index.html" class="header-title">
             <span id="header-word-1">Geo</span>
             <span id="header-word-2">Quiz</span>
         </a>
