--- a/index.html
+++ b/index.html
@@ -31,18 +31,32 @@
     <main>
         <section id="question-container">
             <div id="quiz-section">
+                <div id="instructions-box">
+                    <h2 class="header-word-2"><i class="fa-regular fa-compass"></i> Instructions <i class="fa-solid fa-compass-drafting"></i></h2>
+                    <ul>
+                        <li>To start playing, please enter your name and click 'Submit'.</li>
+                        <li>Answer each question by clicking on your chosen answer.</li>
+                        <li>Press the 'next' button to load the following question.</li>
+                        <li>You can check your total score at the end of the 10-question quiz.</li>
+                        <li>To restart the quiz, click on the log or refresh the page.</li>
+                        <li>You can also choose to play again at the end of the quiz.</li>
+                    </ul>
+                    <input type="text" maxlength="15" id="enter-player-name" placeholder="Player 1">
+                    <button onclick="enterPlayerName()">Submit</button>
+                </div>
                 <div id="quiz-box">
                     <span>
-                        <h1 class="header-word-2"><i class="fa-solid fa-earth-americas"></i> Quiz <i
-                                class="fa-solid fa-earth-europe"></i></h1>
+                        <h2 class="header-word-2"><i class="fa-solid fa-earth-americas"></i> Quiz <i
+                                class="fa-solid fa-earth-europe"></i></h2>
                     </span>
+                    <div id="player-name"></div>
                     <div id="score-box">
                         <div id="score-counter">
                             <span id="correct-counter"><i class="fa-regular fa-circle-check"></i> : 0</span>
                             <span id="incorrect-counter"><i class="fa-regular fa-circle-xmark"></i> : 0</span>
                         </div>
                     </div>
-                    <h2 id="question">Question placemark holder</h2>
+                    <h3 id="question">Question placemark holder</h3>
                     <div id="answer-buttons">
                         <button class="btn-option">Answer 1</button>
                         <button class="btn-option">Answer 2</button>
