--- a/index.html
+++ b/index.html
@@ -31,7 +31,22 @@
     <main>
         <section id="question-container">
             <div id="quiz-section">
-                <!-- Instruction Box - Display the game instructions and guidelines -->
+                <!-- Initial panel of the game -->
+                <div id="options-panel">
+                    <h2 class="header-word-2"><i class="fa-solid fa-globe"></i> Welcome! <i
+                            class="fa-solid fa-globe"></i></h2>
+                    <span class="instructions-list">A Geography Quiz for all ages and backgrounds</span>
+                    <span class="instructions-list">Are you ready to try your geographical knowledge?</span>
+                    <div id="options-container"></div>
+                    <button class="btn-option-panel" onclick="enterPlayerName()"> <i class="fa-solid fa-medal"></i>
+                        Leaderboard</button>
+                    <button class="btn-option-panel" onclick="startQuiz()"> <i
+                            class="fa-solid fa-circle-play"></i>
+                        Start Quiz</button>
+                </div>
+            </div>
+            <!-- Instruction Box - Display the game instructions and guidelines -->
+            <div id="instructions-id">
                 <div id="instructions-box">
                     <div id="instructions-container"></div>
                     <h2 class="header-word-2"><i class="fa-regular fa-compass"></i> Instructions <i
@@ -48,13 +63,15 @@
                     </ul>
                     <div id="sign-in-container">
                         <br>
-                        <h2 class="header-word-2"><i class="fa-solid fa-earth-asia"></i> Username <i class="fa-solid fa-earth-africa"></i></h2>
+                        <h2 class="header-word-2"><i class="fa-solid fa-earth-asia"></i> Username <i
+                                class="fa-solid fa-earth-africa"></i></h2>
                         <div id="sign-in-flex">
                             <input type="text" maxlength="15" id="enter-player-name" placeholder="Player 1">
                             <button class="btn-default" onclick="enterPlayerName()">Submit</button>
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
             <!-- Quiz Box - Questions are displayed here -->
             <div id="quiz-box">
