--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <h2 class="header-word-2"><i class="fa-solid fa-award"></i> Leaderboard <i
                         class="fa-solid fa-medal"></i></h2>
                 <ul id="leaderboard-list"></ul>
-                <button class="btn-option-panel" onclick="startQuiz()"> <i class="fa-solid fa-circle-play"></i>
+                <button class="btn-option-panel" onclick="location.reload()"> <i class="fa-solid fa-circle-play"></i>
                     Start Quiz</button>
             </div>
             </div>
