style: style leaderboard and align play game button

--- a/index.html
+++ b/index.html
@@ -73,11 +73,14 @@
             </div>
             <!-- Leaderboard Section -->
             <div id="leaderboard-section">
-                <h2 class="header-word-2"><i class="fa-solid fa-award"></i> Leaderboard <i
-                        class="fa-solid fa-medal"></i></h2>
-                <ul id="leaderboard-list"></ul>
-                <button class="btn-option-panel" onclick="location.reload()"> <i class="fa-solid fa-circle-play"></i>
-                    Start Quiz</button>
+                <div id="leaderboard-container">
+                    <h2 class="header-word-2"><i class="fa-solid fa-award"></i> Leaderboard <i
+                            class="fa-solid fa-medal"></i></h2>
+                    <ul id="leaderboard-list"></ul>
+                    <button class="btn-option-panel" onclick="location.reload()"> <i
+                            class="fa-solid fa-circle-play"></i>
+                        Start Quiz</button>
+                </div>
             </div>
             </div>
             <!-- Quiz Box - Questions are displayed here -->
@@ -86,7 +89,7 @@
                     <h2 class="header-word-2"><i class="fa-solid fa-earth-americas"></i> Quiz <i
                             class="fa-solid fa-earth-europe"></i></h2>
                 </span>
-                <h3 id="player-name"></h3>
+                <h3 class=white-halo id="player-name"></h3>
                 <div id="score-box">
                     <div id="score-counter">
                         <span id="correct-counter"><i class="fa-regular fa-circle-check"></i> : 0</span>
