refactor: add a line break at less than 5 score question

--- a/index.html
+++ b/index.html
@@ -82,14 +82,11 @@
                         Start Quiz</button>
                 </div>
             </div>
-            </div>
             <!-- Quiz Box - Questions are displayed here -->
             <div id="quiz-box">
-                <span>
                     <h2 class="header-word-2"><i class="fa-solid fa-earth-americas"></i> Quiz <i
                             class="fa-solid fa-earth-europe"></i></h2>
-                </span>
-                <h3 class=white-halo id="player-name"></h3>
+                <h3 class=white-halo id="player-name">Player Name:</h3>
                 <div id="score-box">
                     <div id="score-counter">
                         <span id="correct-counter"><i class="fa-regular fa-circle-check"></i> : 0</span>
@@ -109,8 +106,6 @@
                 <div id="progress-bar">
                     <div id="my-progress"></div>
                 </div>
-            </div>
-            </div>
             </div>
         </section>
     </main>
