feat: Add 404 page not found

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!--Main-->
     <main>
-        <section id="question-container">
+        <section class="question-container">
             <div id="quiz-section">
                 <!-- Initial panel of the game -->
                 <div id="options-panel">
