style: Add background boar to 404 page not found

--- a/404.html
+++ b/404.html
@@ -30,14 +30,14 @@
     <!--Main-->
     <main>
         <!-- 404 -->
-        <section id="question-container">
-            <div>
+        <section class="question-container">
+            <div id="page-not-found">
                 <h2><i class="fa-solid fa-globe"></i> Error 404 - Page not found <i class="fa-solid fa-globe"></i></h2>
                 <br>
                 <h3>Are you lost? Is this uncharted territory? <i class="fa-solid fa-map-location-dot"></i></h3>
-                <h3>Need a compass to lead you home?!</h3>
+                <h3>Need a compass to lead you <strong>Home</strong>?!</h3>
                 <br>
-                <a class="btn-option-panel" href="index.html" class="header-title"><i class="fa-regular fa-compass"></i> Home: Click here!</a>
+                <a class="btn-option-panel" href="index.html" class="header-title"><i class="fa-regular fa-compass"></i> Click here!</a>
             </div>
         </section>
     </main>
