refactor: correct a typo on styles

--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
                 <h2>Are you lost? Is this uncharted territory? <i class="fa-solid fa-map-location-dot"></i></h3>
                 <h2>Need a compass to lead you <strong>Home</strong>?!</h3>
                 <br>
-                <a class="btn-404" href="index.html" class="header-title"><i class="fa-regular fa-compass"></i> Click here!</a>
+                <a id="btn-404" href="index.html" class="header-title"><i class="fa-regular fa-compass"></i> Click here!</a>
             </div>
         </section>
     </main>
