refactor: fix indentation mistakes found by w3c html validator on 404 page

--- a/404.html
+++ b/404.html
@@ -34,10 +34,11 @@
             <div id="page-not-found">
                 <h2><i class="fa-solid fa-globe"></i> Error 404 - Page not found <i class="fa-solid fa-globe"></i></h2>
                 <br>
-                <h2>Are you lost? Is this uncharted territory? <i class="fa-solid fa-map-location-dot"></i></h3>
-                <h2>Need a compass to lead you <strong>Home</strong>?!</h3>
-                <br>
-                <a id="btn-404" href="index.html" class="header-title"><i class="fa-regular fa-compass"></i> Click here!</a>
+                <h2>Are you lost? Is this uncharted territory? <i class="fa-solid fa-map-location-dot"></i></h2>
+                    <h2>Need a compass to lead you <strong>Home</strong>?!</h2>
+                        <br>
+                        <a id="btn-404" href="index.html" class="header-title"><i class="fa-regular fa-compass"></i>
+                            Click here!</a>
             </div>
         </section>
     </main>
@@ -58,9 +59,6 @@
 
     <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
-
-    <!-- Script -->
-    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
