docs: add item 2 - strategy plane to readme file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
     <meta name="description" content="GeoQuiz | a Geography Quiz for all ages and backgrounds">
-    <meta name="keywords" content="GeoQUiz, Trivia, Game, Geopolitcs, Climatology, Landforms, Earth, Biogeography">
+    <meta name="keywords" content="GeoQUiz, Trivia, Game, Geopolitics, Climatology, Landforms, Earth, Biogeography">
     <!-- Title -->
     <title>GeoQuiz</title>
     <!-- Favicon -->
