feat: Add Back button to leaderboard and instruction menu, also update readme

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                             <input type="text" maxlength="15" id="enter-player-name" placeholder="Player 1">
                             <button class="btn-default" onclick="enterPlayerName()">Submit</button>
                         </div>
+                        <div id="back-button>"
+                        <button class="btn-option-panel" onclick="location.reload()">Back to Main Menu</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -77,9 +80,7 @@
                     <h2 class="header-word-2"><i class="fa-solid fa-award"></i> Leaderboard <i
                             class="fa-solid fa-medal"></i></h2>
                     <ul id="leaderboard-list"></ul>
-                    <button class="btn-option-panel" onclick="location.reload()"> <i
-                            class="fa-solid fa-circle-play"></i>
-                        Start Quiz</button>
+                    <button class="btn-option-panel" onclick="location.reload()">Back to Main Menu</button>
                 </div>
             </div>
             <!-- Quiz Box - Questions are displayed here -->
