refactor: correct typo mistakes post validators check

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                             quiz.</li>
                         <li class="instructions-list">4. To restart the quiz, click on the log or refresh the page.</li>
                         <li class="instructions-list">5. You can also choose to play again at the end of the quiz.</li>
-                        <li class="instructions-list">6. If played on mobile devices, it is recommended to do so in portrait orientation.</li>
+                        <li class="instructions-list">6. If played on mobile devices, it is recommended to do so in
+                            portrait orientation.</li>
                     </ul>
                     <div id="sign-in-container">
                         <br>
@@ -69,8 +70,8 @@
                             <input type="text" maxlength="15" id="enter-player-name" placeholder="Player 1">
                             <button class="btn-default" onclick="enterPlayerName()">Submit</button>
                         </div>
-                        <div id="back-button>"
-                        <button class="btn-option-panel" onclick="location.reload()">Back to Main Menu</button>
+                        <div id="back-button">
+                            <button class="btn-option-panel" onclick="location.reload()">Back to Main Menu</button>
                         </div>
                     </div>
                 </div>
@@ -80,7 +81,7 @@
                 <div id="leaderboard-container">
                     <h2 class="header-word-2"><i class="fa-solid fa-award"></i> Leaderboard <i
                             class="fa-solid fa-medal"></i></h2>
-                    <h3 id= "lead-name-score" class="header-word-2">Name and Score</h3>
+                    <h3 id="lead-name-score" class="header-word-2">Name and Score</h3>
                     <h3 id="no-record-set" class="white-halo">No record has been set yet!</h3>
                     <ul id="leaderboard-list"></ul>
                     <button class="btn-option-panel" onclick="location.reload()">Back to Main Menu</button>
@@ -88,8 +89,8 @@
             </div>
             <!-- Quiz Box - Questions are displayed here -->
             <div id="quiz-box">
-                    <h2 class="header-word-2"><i class="fa-solid fa-earth-americas"></i> Quiz <i
-                            class="fa-solid fa-earth-europe"></i></h2>
+                <h2 class="header-word-2"><i class="fa-solid fa-earth-americas"></i> Quiz <i
+                        class="fa-solid fa-earth-europe"></i></h2>
                 <h3 class=white-halo id="player-name">Player Name:</h3>
                 <div id="score-box">
                     <div id="score-counter">
